<resources>
    <string name="app_name">UTSPraktik-IF6-10119232-MuhammadFaisalObara</string>

    // Halaman Form Pengisian Data
    <string name="form">Form Pengisian Data</string>
    <string name="info">Info</string>
    <string name="deskripsi">Form berikut ini bertujuan untuk memberikan informasi\nkepada pusat agar dapat mudah dilaporkan</string>
    <string name="jenis">Jenis Tes</string>
    <string name="harus">- Harus Diisi</string>
    <string name="rapid">Rapid Antigen</string>
    <string name="pcr">PCR</string>
    <string name="tanggal">Tanggal Terkonfirmasi</string>
    <string name="nik">NIK</string>
    <string name="nama">Nama</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenkel">Jenis Kelamin</string>
    <string name="laki">Laki - laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="hubungan">Hubungan Dengan Anda</string>
    <string name="ortu">Orang Tua</string>
    <string name="suami_istri">Suami/Istri</string>
    <string name="anak">Anak</string>
    <string name="kerabat">Kerabat Lainnya</string>
    <string name="ketentuan">Dengan ini saya menyetujui bahwa data yang saya isikan adalah\nbenar</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="hint_tanggal">Pilih Tanggal</string>
    <string name="hint_nik">Masukkan NIK</string>
    <string name="hint_nama">Masukkan Nama</string>

    //Halaman Preview
    <string name="cek">Cek Kembali Isian Data</string>
    <string name="cek_btn">Cek Hasil Tes</string>
    <string name="ubah">Ubah</string>

    //Halaman Berhasil Input
    <string name="berhasil">Berhasil Mendapatkan Akses</string>
    <string name="berhasil_desk">Silahkan tap tombol di bawah untuk memulai\n mengisi form Lapor Kesehatan Harian.</string>
    <string name="ok">OK</string>

</resources>